completed user registration and login function