@@ -1,29 +1,42 @@
 package Service;
 
+import java.util.List;
+
 import DAO.AccountDAO;
 import Model.Account;
 
 public class AccountService {
-// chatgpt, suu, and I created all of this. feel free to delete or edit//
-    private final AccountDAO accountDAO;
+    private AccountDAO accountDAO;
 
-    public AccountService(AccountDAO accountDAO) {
-        this.accountDAO = accountDAO;
+    // Constructor//
+    public AccountService(){
+
+        this.accountDAO = new AccountDAO();
+
     }
 
-    public Account registerAccount(Account account) {
-        if (account.getUsername() == null || account.getUsername().isBlank() ||
-            account.getPassword() == null || account.getPassword().length() <= 4) {
+// Requirements for Account Creation: Not Blank, atleast 4 characters long, cannot exists in the database already//
+// Method// 
+    public Account addAccount(Account account) throws Exception{
+        if(account.getUsername().trim().isEmpty() || account.getUsername() == null){
             return null;
         }
-        return accountDAO.createAccount(account);
+        
+        if(account.getPassword().length() < 4 || account.getPassword() == null){
+            return null;
+        }
+            
+        return accountDAO.create(account);
     }
 
-    public Account login(String username, String password) {
-        Account account = accountDAO.getAccountByUsername(username);
-        if (account != null && account.getPassword().equals(password)) {
-            return account;
+    public List <Account> getAllAccounts()  {
+        return accountDAO.getAllAccounts();
+    }
+
+    public Account validateLogin(String username, String password) {
+        if (username == null || password == null || username.isEmpty() || password.isEmpty()) {
+            return null;
         }
-        return null;
+        return accountDAO.getAccountByUsernameAndPassword(username, password);
     }
 }
